More documentation, variables changed
